--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
@@ -186,8 +186,11 @@
     <button th:if="${perm.checkAuth('eam_asset:asset-voucher')}" class="layui-btn layui-btn-xs asset-voucher-button"                            lay-event="asset-voucher" th:text="${lang.translate('凭证')}" data-id="{{d.id}}">凭证</button>
 </script>
 
+<script th:inline="javascript" th:src="'/business/eam/asset/asset_a.js?'+${cacheKey}">
 
-<script th:inline="javascript">
+</script>
+
+<script th:inline="javascript" >
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
     var AUTH_PREFIX="eam_asset";
 
@@ -201,13 +204,19 @@
     // 是否需要审批
     var APPROVAL_REQUIRED = [[${approvalRequired}]] ;
 
+
+    //公共数据
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
     var SELECT_EQUIPMENTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}]];
     var SELECT_MAINTENANCESTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}]];
 
+    //搜索分类字典
     var ASSET_CATEGORY_DATA =  [[${assetCategoryData}]];
+
+    //前端属性列表控制
     var ATTRIBUTE_LIST_DATA =  [[${attributeListData}]];
+
 
 </script>
 <script th:src="'/business/eam/asset/asset_column_list.js?'+${cacheKey}"></script>
