--- a/eam/view/view-eam/src/main/resources/public/business/eam/daily_management/myAsset_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/daily_management/myAsset_list.html
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('资产')}">资产</title>
+    <title th:text="${lang.translate('个人资产')}">个人资产</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
@@ -97,6 +97,7 @@
 
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
 
+    //公共数据
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
     var SELECT_EQUIPMENTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}]];
@@ -105,13 +106,13 @@
     var ATTRIBUTE_LIST_DATA = [[${attributeListData}]] ;
     var EMPLOYEE_ID = [[${employeeId}]] ;
 
-    var AUTH_PREFIX="eam_asset";
+    var AUTH_PREFIX="my_asset";
 
 </script>
 
 <script th:src="'/business/eam/asset/asset_column_list.js?'+${cacheKey}"></script>
-<script th:src="'/business/eam/asset/asset_search/employee_assetInfo_ext.js?'+${cacheKey}"></script>
-<script th:src="'/business/eam/asset/asset_search/employee_assetInfo_list.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/daily_management/myAsset_ext.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/daily_management/myAsset_list.js?'+${cacheKey}"></script>
 
 </body>
 </html>
