--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
@@ -342,7 +342,7 @@
 <div  th:fragment="maintenance_status"  class="layui-form-item" >
     <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('维保状态')}">维保状态</div></div>
     <div class="layui-input-block layui-input-block-c1">
-        <div id="maintenanceStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}"></div>
+       <div id="maintenanceStatus" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_maintenance_status'}"></div>
     </div>
 </div>
 
