--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-17 13:03:40
+ * @since 2021-10-19 08:56:48
  */
  -->
  <!DOCTYPE html>
@@ -122,9 +122,9 @@
                     </div>
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('是否报废')}">是否报废</div></div>
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('是否清理')}">是否清理</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="scrap" id="scrap" name="scrap" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('是否报废') }" type="text" class="layui-input"  />
+                            <input lay-filter="cleanOut" id="cleanOut" name="cleanOut" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('是否清理') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
@@ -367,7 +367,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('维保状态')}">维保状态</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="maintenanceStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}"></div>
+                            <div id="maintenanceStatus" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_maintenance_status'}"></div>
                         </div>
                     </div>
 
@@ -681,7 +681,6 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
-    var SELECT_MAINTENANCESTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}]];
     var SELECT_EQUIPMENTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}]];
     var VALIDATE_CONFIG={"purchaseDate":{"date":true,"labelInForm":"采购日期","inputType":"date_input"},"maintenanceEndDate":{"date":true,"labelInForm":"结束时间","inputType":"date_input"},"entryTime":{"date":true,"labelInForm":"入账时间","inputType":"date_input"},"maintenanceStartDate":{"date":true,"labelInForm":"开始时间","inputType":"date_input"}};
     var AUTH_PREFIX="eam_asset";
