--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
@@ -186,7 +186,7 @@
     <button th:if="${perm.checkAuth('eam_asset:asset-voucher')}" class="layui-btn layui-btn-xs asset-voucher-button"                            lay-event="asset-voucher" th:text="${lang.translate('凭证')}" data-id="{{d.id}}">凭证</button>
 </script>
 
-<script th:inline="javascript" th:src="'/business/eam/asset/asset_a.js?'+${cacheKey}">
+<!--<script th:inline="javascript" th:src="'/business/eam/asset/asset_a.js?'+${cacheKey}">-->
 
 </script>
 
